[package]
name = "sudoku1"
version = "0.1.0"
authors = ["Michael Gill"]
edition = "2018"
readme = "README.md"
homepage = "https://orthogonalsquare.com"
repository = "https://github.com/anorthogonalsquare/sudoku1"
license = "GPL-3.0+"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
